namespaces/live.cloud-platform.service.justice.gov.uk/iac-fees-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iac-fees-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMCTS"
    cloud-platform.justice.gov.uk/slack-channel: "dts-legacy-apps-support-team"
    cloud-platform.justice.gov.uk/application: "iac-fees"
    cloud-platform.justice.gov.uk/owner: "DTS Legacy: dts-legacy-apps-support-team@hmcts.net"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmcts-iacfees"
    cloud-platform.justice.gov.uk/team-name: "dts-legacy"
    cloud-platform.justice.gov.uk/review-after: ""
